--- a/public/index.html
+++ b/public/index.html
@@ -31,72 +31,121 @@
         background: #0d8a6f;
       }
       #status {
-        margin-top: 2rem;
+        margin-top: 1.5rem;
         font-family: monospace;
         color: #333;
         white-space: pre-wrap;
       }
+      #emotion {
+        font-size: 2rem;
+        margin-top: 1rem;
+      }
+      #transcript {
+        font-size: 0.9rem;
+        color: #444;
+        margin-top: 1rem;
+        background: #fff;
+        border-radius: 8px;
+        padding: 1rem;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        text-align: left;
+      }
     </style>
   </head>
+
   <body>
     <h1>🎙️ Verduurzaam Adviseur</h1>
-    <p>Klik op “Start” en praat — de adviseur luistert en geeft direct antwoord.</p>
+    <p>Klik op “Start” en praat — de adviseur luistert en reageert direct.</p>
     <button id="start">Start</button>
     <div id="status"></div>
+    <div id="emotion"></div>
+    <div id="transcript"></div>
 
     <script type="module">
       const startBtn = document.getElementById("start");
       const statusDiv = document.getElementById("status");
+      const emotionDiv = document.getElementById("emotion");
+      const transcriptDiv = document.getElementById("transcript");
 
       startBtn.onclick = async () => {
         try {
-          statusDiv.innerText = "🎤 Microfoon wordt gestart...";
+          statusDiv.innerText = "🎤 Microfoon starten...";
           const mic = await navigator.mediaDevices.getUserMedia({ audio: true });
-
           statusDiv.innerText = "🔗 Verbinden met de Verduurzaam Adviseur...";
 
-          // 1️⃣ Create temporary OpenAI Realtime session from backend
+          // 🎧 Ephemeral session ophalen
           const sessionResp = await fetch("/session");
-          const sessionData = await sessionResp.json();
+          const session = await sessionResp.json();
+          if (!session?.client_secret?.value)
+            throw new Error("Geen geldige sessie ontvangen.");
+          const EPHEMERAL_KEY = session.client_secret.value;
+          const MODEL = "gpt-realtime-mini-2025-10-06";
 
-          if (!sessionData?.client_secret?.value) {
-            throw new Error("Geen geldige sessie ontvangen van server.");
-          }
-
-          const EPHEMERAL_KEY = sessionData.client_secret.value;
-          const MODEL = sessionData.model || "gpt-4o-realtime-mini";
-
-          // 2️⃣ Create WebRTC connection
+          // WebRTC setup
           const pc = new RTCPeerConnection();
 
-          // 3️⃣ Handle GPT audio
+          // 🔊 Ontvang GPT audio
           pc.ontrack = (event) => {
             const [stream] = event.streams;
-            if (stream) {
-              const audioEl = document.createElement("audio");
-              audioEl.autoplay = true;
-              audioEl.srcObject = stream;
-              document.body.appendChild(audioEl);
-              statusDiv.innerText = "🗣️ Adviseur luistert en spreekt...";
-            }
+            const audioEl = document.createElement("audio");
+            audioEl.autoplay = true;
+            audioEl.srcObject = stream;
+            document.body.appendChild(audioEl);
+            statusDiv.innerText = "🗣️ Adviseur luistert en spreekt...";
           };
 
-          // 4️⃣ Send mic audio
+          // 🎙️ Verstuur lokale microfoon
           mic.getTracks().forEach((track) => pc.addTrack(track, mic));
 
-          // 5️⃣ Data channel for events/text/actions
+          // 💬 DataChannel voor control + tekst
           const dc = pc.createDataChannel("oai-events");
+
+          // Buffer voor transcriptie
+          let transcriptBuffer = "";
 
           dc.onmessage = async (evt) => {
             try {
               const msg = JSON.parse(evt.data);
 
-              // 📝 Text stream from GPT
+              // 💬 Tekst van GPT (realtime)
               if (msg.type === "response.output_text.delta") {
-                console.log("💬", msg.delta);
+                statusDiv.innerText = "💬 " + msg.delta;
+                transcriptDiv.innerText += `🤖 ${msg.delta}`;
               }
 
-              // 🌐 Web search request
+              if (msg.type === "response.completed") {
+                transcriptDiv.innerText += "\n";
+              }
+
+              // 🎧 Gebruikerstranscriptie
+              if (msg.type === "input_audio_buffer.speech_transcribed") {
+                const text = msg.transcript?.trim();
+                if (text) {
+                  transcriptDiv.innerText += `👤 ${text}\n`;
+                  transcriptBuffer = text;
+                  console.log("🎧 Gebruiker zei:", text);
+
+                  // 🎭 Eenvoudige emotie-inschatting
+                  const t = text.toLowerCase();
+                  let emotion = "😐";
+                  if (t.match(/\b(leuk|goed|top|prima|gezellig|fijn)\b/))
+                    emotion = "😊";
+                  else if (t.match(/\b(denk|twijfel|misschien|uh|weet niet)\b/))
+                    emotion = "🤔";
+                  else if (t.match(/\b(niet|nee|geen zin|slecht)\b/))
+                    emotion = "😞";
+                  else if (t.match(/\b(boos|irritant|gedoe)\b/))
+                    emotion = "😠";
+
+                  emotionDiv.innerText = `${emotion}`;
+                  console.log(`🎭 Gebruiker klinkt ${emotion}`);
+                }
+              }
+
+              // 🌍 Webzoekopdracht
               if (msg.action === "search" && msg.query) {
                 console.log("🔍 GPT vraagt om zoekopdracht:", msg.query);
                 dc.send(
@@ -104,55 +153,49 @@
                     type: "response.create",
                     response: {
                       modalities: ["audio", "text"],
-                      instructions:
-                        "Een momentje, ik zoek dat even voor je op...",
+                      instructions: "Momentje, ik zoek dat even op...",
                     },
                   })
                 );
-                const resp = await fetch(
-                  `/search?q=${encodeURIComponent(msg.query)}`
-                );
+
+                const resp = await fetch(`/search?q=${encodeURIComponent(msg.query)}`);
                 const data = await resp.json();
-                console.log("🔎 Gemini resultaat:", data.result);
+
                 dc.send(
                   JSON.stringify({
                     type: "response.create",
                     response: {
                       modalities: ["audio", "text"],
                       instructions: `
-Gebruik deze informatie om direct antwoord te geven, zonder dat de gebruiker iets hoeft te herhalen:
+Gebruik deze informatie in je volgende antwoord, zonder URLs te noemen.
 ${data.result}
-                        `,
+                      `,
                     },
                   })
                 );
               }
 
-              // 📞 Lead capture action
+              // 📞 Lead capture actie
               if (msg.action === "save_lead" && msg.data) {
                 console.log("📞 Leadgegevens ontvangen:", msg.data);
-                statusDiv.innerText = "📞 Lead wordt opgeslagen...";
+                statusDiv.innerText = "📞 Gegevens worden opgeslagen...";
                 fetch("/lead", {
                   method: "POST",
                   headers: { "Content-Type": "application/json" },
                   body: JSON.stringify(msg.data),
                 }).then((r) => {
                   if (r.ok)
-                    statusDiv.innerText = "✅ Gegevens opgeslagen, dank je!";
+                    statusDiv.innerText = "✅ Gegevens opgeslagen. Dank je!";
                   else statusDiv.innerText = "⚠️ Opslaan mislukt.";
                 });
               }
-            } catch (err) {
-              console.error("⚠️ Fout bij verwerken bericht:", err);
+            } catch (e) {
+              console.warn("📨 Niet-JSON event:", evt.data);
             }
           };
 
           dc.onopen = () => {
-            console.log("✅ DataChannel open");
-            statusDiv.innerText =
-              "🤖 Verbonden met de Verduurzaam Adviseur...";
-
-            // Greeting
+            console.log("✅ DataChannel open — start begroeting");
             dc.send(
               JSON.stringify({
                 type: "response.create",
@@ -165,11 +208,10 @@ ${data.result}
             );
           };
 
-          // 6️⃣ WebRTC SDP offer
+          // SDP handshake
           const offer = await pc.createOffer();
           await pc.setLocalDescription(offer);
 
-          // 7️⃣ Send offer to OpenAI Realtime API
           const sdpResponse = await fetch(
             `https://api.openai.com/v1/realtime?model=${MODEL}`,
             {
@@ -184,17 +226,17 @@ ${data.result}
           );
 
           if (!sdpResponse.ok) {
-            const errText = await sdpResponse.text();
-            console.error("❌ Verbinding mislukt:", errText);
+            const err = await sdpResponse.text();
+            console.error("❌ Verbinding mislukt:", err);
             statusDiv.innerText = "❌ Verbinding mislukt.";
             return;
           }
 
-          // 8️⃣ Apply answer
           const answer = { type: "answer", sdp: await sdpResponse.text() };
           await pc.setRemoteDescription(answer);
 
-          statusDiv.innerText = "✅ Verbonden! Je kunt nu praten met de adviseur.";
+          statusDiv.innerText =
+            "✅ Verbonden! Praat gerust met de Verduurzaam Adviseur.";
         } catch (err) {
           console.error("❌ Setup fout:", err);
           statusDiv.innerText = "❌ Verbinding mislukt.";
