--- a/public/index.html
+++ b/public/index.html
@@ -31,216 +31,163 @@
         background: #0d8a6f;
       }
       #status {
-        margin-top: 1.5rem;
+        margin-top: 2rem;
         font-family: monospace;
         color: #333;
         white-space: pre-wrap;
       }
-      #emotion {
-        font-size: 2rem;
-        margin-top: 1rem;
-      }
-      #transcript {
-        font-size: 0.9rem;
-        color: #444;
-        margin-top: 1rem;
-        background: #fff;
-        border-radius: 8px;
-        padding: 1rem;
-        max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        text-align: left;
-      }
     </style>
   </head>
-
   <body>
     <h1>🎙️ Verduurzaam Adviseur</h1>
-    <p>Klik op “Start” en praat — de adviseur luistert en reageert direct.</p>
+    <p>Klik op “Start” en praat — de adviseur luistert en geeft direct antwoord.</p>
     <button id="start">Start</button>
     <div id="status"></div>
-    <div id="emotion"></div>
-    <div id="transcript"></div>
 
     <script type="module">
       const startBtn = document.getElementById("start");
       const statusDiv = document.getElementById("status");
-      const emotionDiv = document.getElementById("emotion");
-      const transcriptDiv = document.getElementById("transcript");
 
       startBtn.onclick = async () => {
-        try {
-          statusDiv.innerText = "🎤 Microfoon starten...";
-          const mic = await navigator.mediaDevices.getUserMedia({ audio: true });
-          statusDiv.innerText = "🔗 Verbinden met de Verduurzaam Adviseur...";
+        statusDiv.innerText = "🎤 Toegang tot microfoon aanvragen...";
+        const mic = await navigator.mediaDevices.getUserMedia({ audio: true });
+        statusDiv.innerText = "✅ Microfoon actief. Verbinden met assistent...";
 
-          // 🎧 Ephemeral session ophalen
-          const sessionResp = await fetch("/session");
-          const session = await sessionResp.json();
-          if (!session?.client_secret?.value)
-            throw new Error("Geen geldige sessie ontvangen.");
-          const EPHEMERAL_KEY = session.client_secret.value;
-          const MODEL = "gpt-realtime-mini-2025-10-06";
+        // Create RTCPeerConnection
+        const pc = new RTCPeerConnection();
+        let greeted = false;
 
-          // WebRTC setup
-          const pc = new RTCPeerConnection();
+        // GPT voice output
+        pc.ontrack = (event) => {
+          const [stream] = event.streams;
+          const audioEl = document.createElement("audio");
+          audioEl.autoplay = true;
+          audioEl.srcObject = stream;
+          document.body.appendChild(audioEl);
+        };
 
-          // 🔊 Ontvang GPT audio
-          pc.ontrack = (event) => {
-            const [stream] = event.streams;
-            const audioEl = document.createElement("audio");
-            audioEl.autoplay = true;
-            audioEl.srcObject = stream;
-            document.body.appendChild(audioEl);
-            statusDiv.innerText = "🗣️ Adviseur luistert en spreekt...";
-          };
+        // Send local mic audio
+        mic.getTracks().forEach((track) => pc.addTrack(track, mic));
 
-          // 🎙️ Verstuur lokale microfoon
-          mic.getTracks().forEach((track) => pc.addTrack(track, mic));
+        // Create DataChannel
+        const dc = pc.createDataChannel("oai-events");
+        dc.onmessage = async (evt) => {
+          try {
+            const msg = JSON.parse(evt.data);
 
-          // 💬 DataChannel voor control + tekst
-          const dc = pc.createDataChannel("oai-events");
+            // --- Live transcription ---
+            if (msg.type === "input_audio_buffer.speech_transcription.delta" && msg.delta) {
+              console.log("🗣️ Gebruiker:", msg.delta);
+              statusDiv.innerText = "🗣️ Jij: " + msg.delta;
+            }
 
-          // Buffer voor transcriptie
-          let transcriptBuffer = "";
+            // --- Text output from assistant ---
+            if (msg.type === "response.output_text.delta" && msg.delta) {
+              console.log("🤖 Adviseur:", msg.delta);
+              statusDiv.innerText = "🤖 " + msg.delta;
+            }
 
-          dc.onmessage = async (evt) => {
-            try {
-              const msg = JSON.parse(evt.data);
+            // --- Emotion heuristic ---
+            if (msg.type === "response.output_text.delta" && msg.delta) {
+              const txt = msg.delta.toLowerCase();
+              let emotion = "neutral 😐";
+              if (txt.includes("mooi") || txt.includes("goed")) emotion = "positive 😊";
+              else if (txt.includes("jammer") || txt.includes("helaas")) emotion = "sad 😔";
+              console.log("💭 Likely emotion:", emotion);
+            }
 
-              // 💬 Tekst van GPT (realtime)
-              if (msg.type === "response.output_text.delta") {
-                statusDiv.innerText = "💬 " + msg.delta;
-                transcriptDiv.innerText += `🤖 ${msg.delta}`;
-              }
+            // --- Handle tool calls ---
+            if (msg.type === "response.tool_call") {
+              if (msg.name === "save_lead") {
+                const { postcode, huisnummer, telefoon } = msg.arguments || {};
+                console.log("📞 Lead tool call:", msg.arguments);
 
-              if (msg.type === "response.completed") {
-                transcriptDiv.innerText += "\n";
-              }
-
-              // 🎧 Gebruikerstranscriptie
-              if (msg.type === "input_audio_buffer.speech_transcribed") {
-                const text = msg.transcript?.trim();
-                if (text) {
-                  transcriptDiv.innerText += `👤 ${text}\n`;
-                  transcriptBuffer = text;
-                  console.log("🎧 Gebruiker zei:", text);
-
-                  // 🎭 Eenvoudige emotie-inschatting
-                  const t = text.toLowerCase();
-                  let emotion = "😐";
-                  if (t.match(/\b(leuk|goed|top|prima|gezellig|fijn)\b/))
-                    emotion = "😊";
-                  else if (t.match(/\b(denk|twijfel|misschien|uh|weet niet)\b/))
-                    emotion = "🤔";
-                  else if (t.match(/\b(niet|nee|geen zin|slecht)\b/))
-                    emotion = "😞";
-                  else if (t.match(/\b(boos|irritant|gedoe)\b/))
-                    emotion = "😠";
-
-                  emotionDiv.innerText = `${emotion}`;
-                  console.log(`🎭 Gebruiker klinkt ${emotion}`);
-                }
-              }
-
-              // 🌍 Webzoekopdracht
-              if (msg.action === "search" && msg.query) {
-                console.log("🔍 GPT vraagt om zoekopdracht:", msg.query);
-                dc.send(
-                  JSON.stringify({
-                    type: "response.create",
-                    response: {
-                      modalities: ["audio", "text"],
-                      instructions: "Momentje, ik zoek dat even op...",
-                    },
-                  })
-                );
-
-                const resp = await fetch(`/search?q=${encodeURIComponent(msg.query)}`);
-                const data = await resp.json();
-
-                dc.send(
-                  JSON.stringify({
-                    type: "response.create",
-                    response: {
-                      modalities: ["audio", "text"],
-                      instructions: `
-Gebruik deze informatie in je volgende antwoord, zonder URLs te noemen.
-${data.result}
-                      `,
-                    },
-                  })
-                );
-              }
-
-              // 📞 Lead capture actie
-              if (msg.action === "save_lead" && msg.data) {
-                console.log("📞 Leadgegevens ontvangen:", msg.data);
-                statusDiv.innerText = "📞 Gegevens worden opgeslagen...";
-                fetch("/lead", {
+                const resp = await fetch("/lead", {
                   method: "POST",
                   headers: { "Content-Type": "application/json" },
-                  body: JSON.stringify(msg.data),
-                }).then((r) => {
-                  if (r.ok)
-                    statusDiv.innerText = "✅ Gegevens opgeslagen. Dank je!";
-                  else statusDiv.innerText = "⚠️ Opslaan mislukt.";
+                  body: JSON.stringify({ postcode, huisnummer, telefoon }),
                 });
+                const data = await resp.json();
+                console.log("✅ Lead opgeslagen:", data);
+                dc.send(
+                  JSON.stringify({
+                    type: "response.tool_output",
+                    tool_call_id: msg.id,
+                    output: { success: true },
+                  })
+                );
               }
-            } catch (e) {
-              console.warn("📨 Niet-JSON event:", evt.data);
-            }
-          };
 
-          dc.onopen = () => {
-            console.log("✅ DataChannel open — start begroeting");
+              if (msg.name === "search") {
+                console.log("🔍 Search tool call:", msg.arguments);
+                const q = encodeURIComponent(msg.arguments?.query || "");
+                const resp = await fetch(`/search?q=${q}`);
+                const data = await resp.json();
+                console.log("🔎 Search result:", data.result);
+                dc.send(
+                  JSON.stringify({
+                    type: "response.tool_output",
+                    tool_call_id: msg.id,
+                    output: { result: data.result },
+                  })
+                );
+              }
+            }
+          } catch (e) {
+            console.warn("⚠️ Non-JSON event:", evt.data);
+          }
+        };
+
+        dc.onopen = () => {
+          console.log("✅ DataChannel open");
+          if (!greeted) {
+            greeted = true;
             dc.send(
               JSON.stringify({
                 type: "response.create",
                 response: {
                   modalities: ["audio", "text"],
-                  instructions:
-                    "Hallo, waar kan ik je mee helpen op het gebied van verduurzamen?",
+                  instructions: "Hallo, waarmee kan ik je helpen?",
                 },
               })
             );
-          };
-
-          // SDP handshake
-          const offer = await pc.createOffer();
-          await pc.setLocalDescription(offer);
-
-          const sdpResponse = await fetch(
-            `https://api.openai.com/v1/realtime?model=${MODEL}`,
-            {
-              method: "POST",
-              headers: {
-                Authorization: `Bearer ${EPHEMERAL_KEY}`,
-                "Content-Type": "application/sdp",
-                "OpenAI-Beta": "realtime=v1",
-              },
-              body: offer.sdp,
-            }
-          );
-
-          if (!sdpResponse.ok) {
-            const err = await sdpResponse.text();
-            console.error("❌ Verbinding mislukt:", err);
-            statusDiv.innerText = "❌ Verbinding mislukt.";
-            return;
           }
+        };
 
-          const answer = { type: "answer", sdp: await sdpResponse.text() };
-          await pc.setRemoteDescription(answer);
+        // --- Create and send offer ---
+        const offer = await pc.createOffer();
+        await pc.setLocalDescription(offer);
 
-          statusDiv.innerText =
-            "✅ Verbonden! Praat gerust met de Verduurzaam Adviseur.";
-        } catch (err) {
-          console.error("❌ Setup fout:", err);
+        const sdpResponse = await fetch("/session", {
+          method: "GET",
+        });
+        const sessionData = await sdpResponse.json();
+        if (!sdpResponse.ok) {
           statusDiv.innerText = "❌ Verbinding mislukt.";
+          console.error("Session error:", sessionData);
+          return;
         }
+
+        const answerResp = await fetch(sessionData.client_secret.value, {
+          method: "POST",
+          headers: {
+            Authorization: `Bearer ${sessionData.client_secret.value}`,
+            "Content-Type": "application/sdp",
+            "OpenAI-Beta": "realtime=v1",
+          },
+          body: offer.sdp,
+        });
+
+        if (!answerResp.ok) {
+          const err = await answerResp.text();
+          console.error("❌ Connection failed:", err);
+          statusDiv.innerText = "❌ Verbinding mislukt:\n" + err;
+          return;
+        }
+
+        const answer = { type: "answer", sdp: await answerResp.text() };
+        await pc.setRemoteDescription(answer);
+        statusDiv.innerText = "✅ Verbonden met Verduurzaam Adviseur. Praat nu!";
       };
     </script>
   </body>
